--- a/config.conf
+++ b/config.conf
@@ -1,4 +1,5 @@
 {
+    hypnotoad => {listen => ['http://*:3889'], workers => 4},
     auth_url => "http://member.adeaz.com/api/login",
     login_key => "7d26eda13b33c1257999de31bcd8ebfc",
     sign_key => "adeazMemberSigKey@#\$\%^&",
