add qq send info after pull

--- a/config.conf
+++ b/config.conf
@@ -6,5 +6,7 @@
     login_session_key => "_adLhum",
     userinfo_key => "3ec8e544422a626075d904d0a9be0dcb",
     userinfo_sign => "!adeazMemberUiFO7&^%",
-    userinfo_url => "http://member.adeaz.com/api/userinfo"
+    userinfo_url => "http://member.adeaz.com/api/userinfo",
+    multiuserinfo_url => "http://member.adeaz.com/api/apimultiuserinfo",
+    qqUrl   =>  "http://42.62.11.197:9888/?"
 }
